<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:paddingTop="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="30dp">

        <TextView
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/textView_state"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="72dp">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/textView_presence"/>

        <TextView
                android:id="@+id/presenceText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:gravity="center"
                  android:paddingStart="16dp"
                  android:paddingEnd="16dp"
                  android:layout_width="match_parent"
                  android:layout_height="72dp">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/textView_last_online"/>

        <TextView
                android:id="@+id/lastOnlineText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>